test/cli/test-validating-policy/exceptions-autogen-controller-metadata/exception.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: PolicyException
metadata:
  name: check-name
spec:
  policyRefs:
    - name: disallow-privilege-escalation
      kind: ValidatingPolicy
  matchConditions:
    - name: "check-name"
      expression: >-
        object.metadata.name in ['skipped-deployment', 'skipped-cronjob', 'skipped-statefulset']
